// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textarea > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base" aria-label="Aria label"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with as correctly 1`] = `
"<section data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`textarea > renders with autoresize correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with avatar and leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with avatar and trailingIcon correctly 1`] = `"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span></div>"`;

exports[`textarea > renders with avatar correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with class correctly 1`] = `
"<div data-slot="root" class="w-48"><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with default slot correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>Default slot
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with disabled correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base" disabled=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with icon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with id correctly 1`] = `
"<div data-slot="root" class=""><textarea id="id" rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with leading and icon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with leading slot correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class="">Leading slot</span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with loading and avatar correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with loading correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with loading trailing and avatar correctly 1`] = `"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><span data-slot="trailing" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="trailingIcon"></span></span></div>"`;

exports[`textarea > renders with loading trailing correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`textarea > renders with loadingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea><span data-slot="leading" class=""><span class="iconify i-lucide:loader" aria-hidden="true" data-slot="leadingIcon"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with name correctly 1`] = `
"<div data-slot="root" class=""><textarea name="name" rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant ghost highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant none correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant none highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant outline correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant outline highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant soft correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant soft highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant subtle highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with placeholder correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" placeholder="Search..." data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant ghost correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant ghost highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant none correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant none highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant outline highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant soft highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant subtle highlight correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with required correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base" required=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with rows correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="5" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size lg correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size md correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size sm correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size xl correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size xs correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with trailing and icon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`textarea > renders with trailing slot correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span>
</div>"
`;

exports[`textarea > renders with trailingIcon correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if--><span data-slot="trailing" class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true" data-slot="trailingIcon"></span></span>
</div>"
`;

exports[`textarea > renders with ui correctly 1`] = `
"<div data-slot="root" class=""><textarea rows="3" data-slot="base"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
